# AdkiBackend

./: .gitignore  Makefile  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: 2e452c0a4eb4_create_users_table.py  47b403152a18_create_deck_table.py  63587614dda4_update_users_name_table.py  6f1f259aed3b_add_server_default_for_due_at.py  8c8c4a9d2f11_add_review_events_history.py  bd084dd3193e_rename_relationship.py  e401b75fedd6_change_column_name.py  f04799371111_add_cards_and_cards_progress.py
docker/: entrypoint.sh
src/: config.py  database.py  main.py  security.py
src/api/routers/: auth.py  base.py  cards.py  decks.py  media.py  review.py  stats.py
src/dependencies/: auth.py
src/models/: __init__.py  base.py  card.py  card_progress.py  deck.py  media_file.py  review_event.py  user.py
src/repositories/: cards.py  deck_repository.py  review.py  user_repository.py
src/schemas/: auth.py  card.py  decks.py  media.py  review.py  stats.py
src/services/: auth_service.py  srs.py
